#----------------------------------------------------------------------------
# Autoconf input script. Start the ./autgen.sh script for producing a
# configure script.
#----------------------------------------------------------------------------
AC_PREREQ([2.54])

AC_INIT([megaglest], [3.4.0], [matze@braunis.de])
#AC_CONFIG_SRCDIR([mk/jam/build.jam])
AC_CONFIG_SRCDIR([mk])
AC_CONFIG_AUX_DIR([mk/autoconf])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET


